#2 travis badge fixed